--- a/chat-room-client/Cargo.toml
+++ b/chat-room-client/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.98"
+chrono = "0.4.40"
 
 ratatui = "0.29.0"
 futures = "0.3"
