--- a/chat-room-client/Cargo.toml
+++ b/chat-room-client/Cargo.toml
@@ -12,5 +12,7 @@ tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.98"
 chrono = "0.4.40"
 
+qu-chat-models = {path = "../qu-chat-models"}
+
 ratatui = "0.29.0"
 futures = "0.3"
