--- a/chat-room-server/Cargo.toml
+++ b/chat-room-server/Cargo.toml
@@ -14,6 +14,8 @@ sha2 = "0.10.8"
 hex = "0.4"
 chrono = "0.4.40"
 
+qu-chat-models = {path = "../qu-chat-models"}
+
 [dependencies.sqlx]
 version = "0.7.0"
 default-features = false
